--- a/example/web/index.html
+++ b/example/web/index.html
@@ -22,9 +22,13 @@
 
 
   <style>
+    body {
+      background-color: #111318;
+    }
+
     /* Loading indicator styles */
     .loading-spinner {
-      border: 4px solid rgba(0, 0, 0, 0.1);
+      border: 4px solid rgba(255, 255, 255, 0.2);
       border-top: 4px solid #3498db;
       border-radius: 50%;
       width: 40px;
@@ -54,6 +58,12 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+
+    .loading-spinner-wrapper p {
+      color: white;
+      margin-top: 15px;
+      font-family: 'Roboto', sans-serif;
+    }
   </style>
 </head>
 
@@ -61,7 +71,7 @@
   <!-- Loading spinner -->
   <div id="loading-screen" class="loading-spinner-wrapper">
     <div class="loading-spinner"></div>
-    <p style="margin-top: 10px;">Flutter Loading...</p>
+    <p>Initializing Flutter</p>
   </div>
 
   <script src="flutter_bootstrap.js" async></script>
